--- a/pom.xml
+++ b/pom.xml
@@ -112,12 +112,12 @@
 		<repository>
 			<id>pte-releases</id>
 			<name>internal releases</name>
-			<url>http://pnetserver:8081/nexus/content/repositories/releases</url>
+			<url>${releases-url}</url>
 		</repository>
 		<snapshotRepository>
 			<id>pte-snapshots</id>
 			<name>internal snapshots</name>
-			<url>http://pnetserver:8081/nexus/content/repositories/snapshots</url>
+			<url>${snapshots-url}</url>
 		</snapshotRepository>
 	</distributionManagement>
 </project>
