--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
-		<developerConnection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
+		<developerConnection>scm:git:git://github.com/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
 	</scm>
 	<build>
