--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
   <name>RelayInterfaces</name>
 
 	<scm>
-		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
-		<developerConnection>scm:git:ssh://github.com/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
-		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
+		<connection>scm:git:git://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
+		<developerConnection>scm:git:git://github.com/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
+		<url>scm:git:git://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
 	</scm>
 	<build>
 		<plugins>
