--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.pte.liquid.relay</groupId>
-  <artifactId>RelayInterfaces</artifactId>
-  <version>0.1.4-SNAPSHOT</version>
-  <name>RelayInterfaces</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.pte.liquid.relay</groupId>
+	<artifactId>RelayInterfaces</artifactId>
+	<version>0.1.4-SNAPSHOT</version>
+	<name>RelayInterfaces</name>
 
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
@@ -20,52 +21,50 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-release-plugin</artifactId>	
-				<version>2.5.2</version>
-  	                <configuration>  	                
-  	                    <autoVersionSubmodules>true</autoVersionSubmodules>  	                    
-  	                    <remoteTagging>true</remoteTagging>
-  	                    <resume>false</resume>  	                                        
- 	                </configuration>
+				<artifactId>maven-scm-plugin</artifactId>
+				<version>1.8.1</version>
+				<configuration>
+					<tag>${project.artifactId}-${project.version}</tag>
+				</configuration>
 			</plugin>
 			<plugin>
-			    <groupId>org.apache.maven.plugins</groupId>
-			    <artifactId>maven-surefire-plugin</artifactId>
-			    <version>2.14.1</version>
-			    <dependencies>
-			      <dependency>
-			        <groupId>org.apache.maven.surefire</groupId>
-			        <artifactId>surefire-junit47</artifactId>
-			        <version>2.14.1</version>
-			      </dependency>
-			    </dependencies>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.14.1</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.apache.maven.surefire</groupId>
+						<artifactId>surefire-junit47</artifactId>
+						<version>2.14.1</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-	
-	<!-- SPRING -->
+
+		<!-- SPRING -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
- 
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- GSON -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
@@ -73,40 +72,40 @@
 			<version>${gson.version}</version>
 			<scope>provided</scope>
 		</dependency>
-		
+
 		<!-- LOGGING -->
 		<dependency>
-      		<groupId>log4j</groupId>
-      		<artifactId>log4j</artifactId>
-      		<version>${log4j.version}</version>  
-      		<scope>test</scope>    	
-    	</dependency>
-		
-		
+			<groupId>log4j</groupId>
+			<artifactId>log4j</artifactId>
+			<version>${log4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+
 		<!-- TESTING -->
 		<dependency>
-      		<groupId>junit</groupId>
-      		<artifactId>junit</artifactId>
-      		<version>${junit.version}</version>
-      		<scope>test</scope>
-    	</dependency>
-    	
-    	<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	
-	
+
+
 	<properties>
 		<spring.version>3.0.4.RELEASE</spring.version>
 		<junit.version>4.8.1</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<gson.version>2.3</gson.version>		
+		<gson.version>2.3</gson.version>
 	</properties>
-	
+
 	<distributionManagement>
 		<repository>
 			<id>pte-releases</id>
