--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,13 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-scm-plugin</artifactId>
-				<version>1.8.1</version>
-				<configuration>
-					<tag>${project.artifactId}-${project.version}</tag>
-				</configuration>
+				<artifactId>maven-release-plugin</artifactId>	
+				<version>2.5.2</version>
+  	                <configuration>  	                
+  	                    <autoVersionSubmodules>true</autoVersionSubmodules>  	                    
+  	                    <remoteTagging>true</remoteTagging>
+  	                    <resume>false</resume>  	                                        
+ 	                </configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
