--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
 	<name>RelayInterfaces</name>
 
 	<scm>
-		<connection>scm:git:git@github.com:/rjptegelaar/liquid-relay-interfaces.git</connection>
-		<developerConnection>scm:git:git@github.com:/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
+		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
+		<developerConnection>scm:git:ssh://github.com/rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
 	</scm>
 	<build>
