--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pte.liquid.relay</groupId>
 	<artifactId>RelayInterfaces</artifactId>
-	<version>0.1.4-SNAPSHOT</version>
+	<version>0.1.4</version>
 	<name>RelayInterfaces</name>
 
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
-	</scm>
+	  <tag>RelayInterfaces-0.1.4</tag>
+  </scm>
 	<build>
 		<plugins>
 			<plugin>
