--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,14 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- JPA -->
+		<dependency>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa</artifactId>
+			<version>2.4.0</version>
+			<scope>provided</scope>
+		</dependency>
+
 
 		<!-- TESTING -->
 		<dependency>
