--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
 	<artifactId>RelayInterfaces</artifactId>
 	<version>0.1.8-SNAPSHOT</version>
 	<name>RelayInterfaces</name>
-
+	<parent>
+		<groupId>com.pte.liquid.relay</groupId>
+		<artifactId>liquid-parent</artifactId>
+		<version>0.0.2-SNAPSHOT</version>
+	</parent>
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:rjptegelaar/liquid-relay-interfaces.git</developerConnection>
@@ -22,7 +26,6 @@
 			</plugin>
 			<plugin>
 				<artifactId>maven-release-plugin</artifactId>	
-				<version>2.5.2</version>
   	                <configuration>  	                
   	                    <autoVersionSubmodules>true</autoVersionSubmodules>  	                    
   	                    <remoteTagging>true</remoteTagging>
@@ -32,7 +35,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.14.1</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.surefire</groupId>
@@ -50,20 +52,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -71,7 +70,6 @@
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>${gson.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -79,7 +77,6 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>${log4j.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -96,25 +93,15 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
-
-	<properties>
-		<spring.version>3.0.4.RELEASE</spring.version>
-		<junit.version>4.8.1</junit.version>
-		<log4j.version>1.2.17</log4j.version>
-		<gson.version>2.3</gson.version>
-	</properties>
 
 	<distributionManagement>
 		<repository>
