--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 		<developerConnection>scm:git:git@github.com:rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
     <tag>HEAD</tag>
-  </scm>
+  </scm>  
 	<build>
 		<plugins>
 			<plugin>
@@ -42,6 +42,26 @@
 						<version>2.14.1</version>
 					</dependency>
 				</dependencies>
+			</plugin>
+			<plugin>
+				<groupId>com.mysema.maven</groupId>
+				<artifactId>maven-apt-plugin</artifactId>				
+				<executions>
+					<execution>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>										
+							<includes>
+								<include>com.pte.liquid.relay.model.**</include>															
+							</includes>
+							<outputDirectory>target/generated-sources/apt</outputDirectory>
+							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>							
+							<showWarnings>true</showWarnings>							
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -83,8 +103,7 @@
 		<!-- JPA -->
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa</artifactId>
-			<version>2.4.0</version>
+			<artifactId>openjpa</artifactId>			
 			<scope>provided</scope>
 		</dependency>
 
@@ -100,6 +119,23 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		
+		<!-- Querydsl -->
+		<dependency>
+			<groupId>com.mysema.querydsl</groupId>
+			<artifactId>querydsl-core</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mysema.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.mysema.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
+			<scope>provided</scope>
 		</dependency>
 
 	</dependencies>
