--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pte.liquid.relay</groupId>
 	<artifactId>RelayInterfaces</artifactId>
@@ -7,14 +8,14 @@
 	<parent>
 		<groupId>com.pte.liquid.relay</groupId>
 		<artifactId>liquid-parent</artifactId>
-		<version>0.0.3</version>
+		<version>0.0.4-SNAPSHOT</version>
 	</parent>
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
-    <tag>HEAD</tag>
-  </scm>  
+		<tag>HEAD</tag>
+	</scm>
 	<build>
 		<plugins>
 			<plugin>
@@ -25,12 +26,12 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<artifactId>maven-release-plugin</artifactId>	
-  	                <configuration>  	                
-  	                    <autoVersionSubmodules>true</autoVersionSubmodules>  	                    
-  	                    <remoteTagging>true</remoteTagging>
-  	                    <resume>false</resume>  	                                        
- 	                </configuration>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<remoteTagging>true</remoteTagging>
+					<resume>false</resume>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -45,20 +46,20 @@
 			</plugin>
 			<plugin>
 				<groupId>com.mysema.maven</groupId>
-				<artifactId>maven-apt-plugin</artifactId>				
+				<artifactId>maven-apt-plugin</artifactId>
 				<executions>
 					<execution>
 						<phase>generate-sources</phase>
 						<goals>
 							<goal>process</goal>
 						</goals>
-						<configuration>										
+						<configuration>
 							<includes>
-								<include>com.pte.liquid.relay.model.**</include>															
+								<include>com.pte.liquid.relay.model.**</include>
 							</includes>
 							<outputDirectory>target/generated-sources/apt</outputDirectory>
-							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>							
-							<showWarnings>true</showWarnings>							
+							<processor>com.mysema.query.apt.jpa.JPAAnnotationProcessor</processor>
+							<showWarnings>true</showWarnings>
 						</configuration>
 					</execution>
 				</executions>
@@ -103,7 +104,7 @@
 		<!-- JPA -->
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa</artifactId>			
+			<artifactId>openjpa</artifactId>
 			<scope>provided</scope>
 		</dependency>
 
@@ -120,7 +121,7 @@
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<!-- Querydsl -->
 		<dependency>
 			<groupId>com.mysema.querydsl</groupId>
@@ -142,9 +143,8 @@
 
 	<distributionManagement>
 		<repository>
-			<id>pte-releases</id>
-			<name>internal releases</name>
-			<url>${releases-url}</url>
+			<id>bintray</id>
+			<url>https://api.bintray.com/maven/paultegelaar/maven/liquid-relay-interfaces</url>
 		</repository>
 		<snapshotRepository>
 			<id>pte-snapshots</id>
