--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.pte.liquid.relay</groupId>
 	<artifactId>RelayInterfaces</artifactId>
-	<version>0.1.9</version>
+	<version>0.1.10-SNAPSHOT</version>
 	<name>RelayInterfaces</name>
 	<parent>
 		<groupId>com.pte.liquid.relay</groupId>
@@ -13,7 +13,7 @@
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
 		<developerConnection>scm:git:git@github.com:rjptegelaar/liquid-relay-interfaces.git</developerConnection>
 		<url>https://github.com/rjptegelaar/liquid-relay-interfaces.git</url>
-		<tag>RelayInterfaces-0.1.9</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<build>
 		<plugins>
