--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
 	<version>1.0.1-SNAPSHOT</version>
 	<name>RelayInterfaces</name>
 	<parent>
-		<groupId>com.pte.liquid.relay</groupId>
+		<groupId>nl.paultegelaar.liquid.relay</groupId>
 		<artifactId>liquid-parent</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1</version>
 	</parent>
 	<scm>
 		<connection>scm:git:https://github.com/rjptegelaar/liquid-relay-interfaces.git</connection>
@@ -62,6 +62,23 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+						<configuration>						
+							<keyname>paultegelaar</keyname>
+							<passphrase>${gpg-passphrase}</passphrase>														
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>		
 		</plugins>
 	</build>
 
@@ -158,5 +175,22 @@
 	</properties>
 
 	<url>https://github.com/rjptegelaar/liquid-relay-interfaces</url>
+	
+	<description>Interfaces constants and concrete domain classes used by all the Liquid components.</description>
+	<licenses>
+		<license>
+			<name>The Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Paul Tegelaar</name>
+			<email>tegelaarpaul@gmail.com</email>
+			<organization>Paul Tegelaar</organization>
+			<organizationUrl>http://www.paultegelaar.nl</organizationUrl>
+		</developer>
+	</developers>
 
 </project>
